# springbok-multimodal

./: .gitignore  pyproject.toml  requirements.txt
geometries/: array_16.xml
mic_array_examples/: convert_aiff_to_hdf5.py  record_frames.py
multimodal/: demonstrate_basic_beamforming.py
multimodal/mic-array-examples/: demonstrate_basic_beamforming.py  mosquitto-passwd.sh  mosquitto-run.sh  mosquitto-sh.sh  mosquitto-test.sh  plot_power_spectral_density.py  publisher.py  record_frames.py  record_two_devices.py  subscriber.py
multimodal/real-time-examples/: Listener.py  Locater.py  Locator.py  Publisher.py  Recorder.py  Subscriber.py  mosquitto-run.sh  mosquitto-sh.sh  mosquitto-start.sh  mosquitto-stop.sh  mosquitto-test.sh
multimodal/real-time-examples/geometries/: array_16.xml
multimodal/real-time-examples/mosquitto/config/: mosquitto.conf
multimodal/spl-examples/: Detector-Performance.ipynb  spl_examples.py
multimodal/spl-examples/2025-01-6-dataset-archive/: dataset.csv  dataset.tex  dataset_SLs.tex
recordings/: A10F41_1734652691_Reciprocating_1_1_698_22_audiomoth_manasas_left_1s+35db.aiff  A10F41_1734652691_Reciprocating_1_1_698_22_audiomoth_manasas_right_1s+35db.aiff
